Fix spacing between cta buttons in case studies

--- a/_sass/_media-queries.scss
+++ b/_sass/_media-queries.scss
@@ -20,6 +20,7 @@
   @include font-size--md();
   @include homepage-blog--md();
   @include navigation-bar--md();
+  @include pre-footer-buttons--md();
   @include security-audit--md();
   @include survey--md();
   @include team--md();
